# polymarket_etl

./: fetch_all_markets.py  polymarket_api.py  polymarket_ws.py  rule_engine.py  test.py
polymarket_wal/: README.md  pyproject.toml
polymarket_wal/src/polymarket_wal/: __init__.py  discovery_loop.py  gamma_client.py  market_discovery.py  market_filter.py  models.py
polymarket_wal/src/polymarket_wal/ws/: __init__.py  connection.py  pool.py
polymarket_wal/tests/: smoke_test_live.py  smoke_test_ws.py  test_discovery_loop.py  test_gamma_client.py  test_market_discovery.py  test_market_filter.py  test_models.py  test_ws_connection.py  test_ws_extract.py  test_ws_pool.py
polymarket_wal/tests/fixtures/: array_format_market.json  binary_market_active.json  binary_market_closed.json  missing_tokens_market.json  multi_outcome_market.json  not_accepting_market.json
src/: __init__.py  analyse_markets.ipynb  gamma_client.py  jsonl_writers.py  market_writer.py  models.py  orchestra_benchmark.py  orchestrator.py  utilities.py
src/market/: fetcher.py  gamma_client.py  market_model.py  models.py  storage.py
src/wal/: writer.py  writer_bk.py
src/ws/: connection.py  pool.py
