[project]
name = "polymarket-wal"
version = "0.1.0"
description = "Polymarket WS message archive (Phase 1: market discovery)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "msgspec>=0.18",
    "websockets>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_wal"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "."]
testpaths = ["tests"]
